--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <title>WebStudio</title>
   </head>
+
   <body>
     <header>
       <nav>
@@ -25,34 +26,36 @@
         <button type="button">Request our service</button>
       </section>
       <section>
-        <div>
-          <h2>ATTENTION TO DETAILS</h2>
-          <p>
-            We go into all the details and processes of your business to develop
-            a customized solution.
-          </p>
-        </div>
-        <div>
-          <h2>PUNCTUALITY</h2>
-          <p>
-            With us, you can feel safe and secure. An important principle of the
-            company: respect your time and deadlines.
-          </p>
-        </div>
-        <div>
-          <h2>PLANNING</h2>
-          <p>
-            You will be able to observe and participate in every phase of
-            solution development and implementation.
-          </p>
-        </div>
-        <div>
-          <h2>MODERN TECHNOLOGIES</h2>
-          <p>
-            We use innovative tools to solve assigned tasks. It's time to
-            simplify work processes.
-          </p>
-        </div>
+        <ul>
+          <li>
+            <h2>ATTENTION TO DETAILS</h2>
+            <p>
+              We go into all the details and processes of your business to
+              develop a customized solution.
+            </p>
+          </li>
+          <li>
+            <h2>PUNCTUALITY</h2>
+            <p>
+              With us, you can feel safe and secure. An important principle of
+              the company: respect your time and deadlines.
+            </p>
+          </li>
+          <li>
+            <h2>PLANNING</h2>
+            <p>
+              You will be able to observe and participate in every phase of
+              solution development and implementation.
+            </p>
+          </li>
+          <li>
+            <h2>MODERN TECHNOLOGIES</h2>
+            <p>
+              We use innovative tools to solve assigned tasks. It's time to
+              simplify work processes.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>What we do</h2>
@@ -131,13 +134,13 @@
     </main>
     <footer>
       <p><a href="WebStudio">WebStudio</a></p>
-      <address>
-        <ul>
-          <li>695 Park Ave, NY 10065, USA</li>
-          <li>info@devstudio.com</li>
-          <li>+1 212-772-4150</li>
-        </ul>
-      </address>
+      <ul>
+        <li>
+          <address>695 Park Ave, NY 10065, USA</address>
+        </li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+      </ul>
     </footer>
   </body>
 </html>
