tema-pentru-acasa-refacuta#1

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <nav>
+        <a href="WebStudio">Web Studio</a>
         <ul>
-          <li><a href="WebStudio">Web Studio</a></li>
           <li><a href="studio.html">Studio</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contacts.html">Contacts</a></li>
@@ -133,14 +133,14 @@
       </section>
     </main>
     <footer>
-      <p><a href="WebStudio">WebStudio</a></p>
-      <ul>
-        <li>
-          <address>695 Park Ave, NY 10065, USA</address>
-        </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
-      </ul>
+      <a href="WebStudio">WebStudio</a>
+      <address>
+        <ul>
+          <li><a href="">695 Park Ave, NY 10065, USA</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
